# aios

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT_2026-07-19.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  facts.jsonl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  pyrightconfig.json  pytest.ini  ruff.toml  run_gateway.py
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/desktop/: electron-builder.yml  package.json  tsconfig.preload.json
apps/desktop/scripts/: dev.ts
apps/desktop/src/main/: advanced-window-manager.ts  agent-runtime.ts  ai-assistant.ts  analytics-engine.ts  auto-launch-manager.ts  cli-controller.ts  clipboard-manager.ts  cloud-sync.ts  collaboration-manager.ts  desktop-automation.ts  developer-console.ts  drag-drop-manager.ts  file-association-manager.ts  index.ts  ipc-handler.ts  notification-manager.ts  observability.ts  persistence.ts  planner.ts  plugin-manager.ts  power-monitor-manager.ts  review-pipeline.ts  shortcuts-manager.ts  store-manager.ts  supervisor.ts  system-integration.ts  tray-manager.ts  update-manager.ts  window-manager.ts  window-state-persistence.ts  workflow-engine.ts  workforce-manager.ts
apps/desktop/src/preload/: index.ts
apps/desktop/src/renderer/: env.d.ts
apps/web/: package-lock.json  package.json  tailwind.config.js
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/agents/: page.tsx
apps/web/src/app/memory/: page.tsx
apps/web/src/app/tools/: page.tsx
apps/web/src/desktop/: types.ts
apps/web/src/desktop/components/: CommandBar.tsx  GoalProgressCard.tsx  OfflineIndicator.tsx  Titlebar.tsx  UpdateIndicator.tsx  VoiceOverlay.tsx
apps/web/src/desktop/layout/: ActivityBar.tsx  AppShell.tsx  Dock.tsx  Inspector.tsx  ResizablePanel.tsx  RightPanel.tsx  Sidebar.tsx  StatusBar.tsx  WorkspaceHeader.tsx
apps/web/src/desktop/services/: CommandPalette.tsx
apps/web/src/desktop/state/: index.ts  layout.ts  session.ts  theme.ts  workspace.ts
apps/web/src/desktop/workspaces/: Agents.tsx  ConsolesWorkspace.tsx  Conversation.tsx  DevMode.tsx  Goals.tsx  Logs.tsx  Memory.tsx  MemoryExplorer.tsx  MissionControl.tsx  Projects.tsx  (+6 more)
apps/web/src/hooks/: useVoice.ts  useVoiceStream.ts
apps/web/src/lib/: api.ts  cn.ts  electron.ts  voice-client.ts
apps/web/src/types/: speech.d.ts
docs/: ARCHITECTURE.md  BRANDING_AUDIT.md  CHANGELOG.md  CLI_REFERENCE.md  EXAMPLES.md  FROZEN_INTERFACES.md  M11_COMPLETION_REPORT.md  M12_COMPLETION_REPORT.md  M13_COMPLETION_REPORT.md  M14_COMPLETION_REPORT.md  M15_COMPLETION_REPORT.md  M16_COMPLETION_REPORT.md  M17_1_COMPLETION_REPORT.md  M1_PLAN.md  M2_1_PLAN.md  M2_2_PLAN.md  M3_PLAN.md  M4_PLAN.md  M8_PLAN.md  M9_COMPLETION_REPORT.md  M9_OSS_ADAPTER_REGISTRY.md  M9_OSS_ARCHITECTURE_DIAGRAM.md  M9_OSS_COMPATIBILITY_REPORT.md  M9_OSS_DEPENDENCY_GRAPH.md  M9_OSS_INTEGRATION_TEST_REPORT.md  M9_OSS_LICENSE_ATTRIBUTION.md  M9_OSS_MODULE_GRAPH.md  M9_OSS_REPORT.md  M9_PLAN.md  QUICKSTART.md  RELEASE_READINESS_v0.7.0.md  RELEASE_v0.3.0.md  RELEASE_v0.4.0.md  RELEASE_v0.5.0.md  RELEASE_v0.6.0.md  RELEASE_v0.6.1.md  RELEASE_v0.6.2.md  RELEASE_v0.6.3.md  RELEASE_v0.6.4.md  RELEASE_v0.6.5.md  (+3 more)
docs/adr/: 0001-runtime.md  0002-provider-layer.md  0003-context-engine.md  0004-memory.md  0005-workflow-engine.md  0006-plugin-runtime.md  0007-permissions.md  0008-capability-registry.md  0009-gateway-sdk.md  001-use-python-312.md  0010-event-bus.md  0011-plugin-lifecycle.md  0012-plugin-sdk-permissions.md  0013-multi-agent-execution.md  0014-observability-stack.md  0015-browser-runtime.md  0016-desktop-integration.md  0017-vision-subsystem.md  0018-integrations-platform.md  0019-developer-platform-architecture.md  002-monorepo-workspace.md  0020-m4-subsystem-extensions.md  0021-supervisor-and-composio.md  0022-native-first-capability-resolution.md  0023-aios-daemon-briefings.md  0024-autonomous-planner.md  0025-parallel-retry-reflection.md  0026-gateway-global-goals-stream.md  0027-aios-cli.md  0028-stabilization-step-sync-and-planner.md  003-use-fastapi.md  004-use-pydantic.md  005-use-ruff.md
examples/: README.md  agent_registration.py  basic_chat.py  memory_usage.py  workflow_example.py
services/gateway/: pyproject.toml
services/gateway/src/aios/gateway/: __init__.py  main.py
services/mcp/: pyproject.toml
services/mcp/src/aios/mcp_service/: __init__.py  platform.py  server.py
services/orchestrator/: pyproject.toml
services/orchestrator/src/aios/orchestrator/: __init__.py  main.py
services/search/: pyproject.toml
services/search/src/aios/search/: __init__.py
services/supervisor/: pyproject.toml
services/supervisor/src/aios/supervisor/: __init__.py  briefing.py  cli.py  daemon.py  executor.py  goal.py  main.py  planner.py  supervisor.py  task_graph.py
services/supervisor/tests/: test_m6_planner.py
services/telemetry/: pyproject.toml
services/telemetry/src/aios/telemetry/: __init__.py
services/vector/: pyproject.toml
services/vector/src/aios/vector/: __init__.py
tests/: _pathsetup.py  conftest.py  m7_smoke_test.py  test_aios_cli.py  test_artifacts.py  test_auth.py  test_browser.py  test_browser_skill.py  test_builtin_tools.py  test_capability_catalog.py  test_capability_resolver.py  test_cli_v2.py  test_composio_connector.py  test_connectors.py  test_context.py  test_contracts.py  test_daemon_briefing.py  test_database.py  test_desktop.py  test_distributed.py  test_events.py  test_fact_store.py  test_gateway_goals_ws.py  test_integrations.py  test_m11_knowledge.py  test_m11_memory_platform.py  test_m12_desktop.py  test_m13_native.py  test_m14_desktop.py  test_m15_features.py  test_m16_features.py  test_m17_devmode.py  test_m2_1.py  test_m2_2.py  test_marketplace.py  test_mcp.py  test_mcp_bridge.py  test_mcp_service.py  test_memory_backends.py  test_memory_manager.py  (+30 more)
(+12 files in other folders)
