[project]
name = "aios"
version = "0.3.0"
description = "AIOS — AI Operating System. A personal AI operating system."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.51.0",
    "pydantic>=2.10",
    "httpx>=0.28",
    "litellm>=1.60",
    "openai>=1.60",
    "anthropic>=0.40",
    "ollama>=0.4",
    "redis>=5.2",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "qdrant-client>=1.12",
    "sentence-transformers>=3.4",
    "livekit-agents>=1.0",
    "faster-whisper>=1.1",
    "kokoro>=0.9",
    "silero-vad>=6.0",
    "playwright>=1.49",
    "mcp>=1.2",
    "celery[redis]>=5.4",
    "pydantic-settings>=2.7",
    "structlog>=24.4",
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "python-multipart>=0.0.18",
    "tomlkit>=0.13",
    "aiofiles>=24.1",
]

[project.optional-dependencies]
voice = [
    "faster-whisper>=1.1",
    "kokoro>=0.9",
    "silero-vad>=6.0",
    "livekit-agents[openai,cartesia,deepgram]>=1.0",
    "sounddevice>=0.5",
    "numpy>=2.0",
]
ml = [
    "torch>=2.5",
    "transformers>=4.47",
    "sentence-transformers>=3.4",
    "onnxruntime>=1.20",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]

[tool.uv.workspace]
members = [
    "packages/core",
    "packages/agents",
    "packages/context",
    "packages/memory",
    "packages/tools",
    "packages/voice",
    "packages/scheduler",
    "packages/providers",
    "packages/browser",
    "packages/desktop",
    "packages/vision",
    "packages/workflows",
    "packages/plugins",
    "packages/integrations",
    "packages/auth",
    "packages/security",
    "packages/skills",
    "packages/mcp",
    "packages/secrets",
    "packages/workspaces",
    "packages/artifacts",
    "packages/prompts",
    "packages/platform",
    "packages/sdk",
    "packages/telemetry",
    "packages/distributed",
    "services/gateway",
    "services/orchestrator",
    "services/mcp",
    "services/supervisor",
]

[tool.uv.sources]
aios-core = { workspace = true }
aios-agents = { workspace = true }
aios-context = { workspace = true }
aios-memory = { workspace = true }
aios-tools = { workspace = true }
aios-voice = { workspace = true }
aios-scheduler = { workspace = true }
aios-providers = { workspace = true }
aios-orchestrator = { workspace = true }
aios-plugins = { workspace = true }
aios-security = { workspace = true }
aios-sdk = { workspace = true }
aios-skills = { workspace = true }
aios-mcp = { workspace = true }
aios-secrets = { workspace = true }
aios-workspaces = { workspace = true }
aios-artifacts = { workspace = true }
aios-prompts = { workspace = true }
aios-platform = { workspace = true }
aios-integrations = { workspace = true }
aios-telemetry = { workspace = true }
aios-workflows = { workspace = true }
aios-desktop = { workspace = true }
aios-browser = { workspace = true }
aios-distributed = { workspace = true }

[tool.ruff]
target-version = "py312"
line-length = 100
exclude = ["vendor/**"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "COM", "C4", "DTZ", "ISC", "ICN", "PIE", "PT", "RSE", "RET", "SLF", "SIM", "TID", "TCH", "INT", "ARG", "PTH", "ERA"]
ignore = ["COM812", "ISC001", "TC002", "TC003"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "SLF001", "ARG002", "ARG005"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]
