[project]
name = "aios-orchestrator"
version = "0.1.0"
description = "AIOS Orchestrator — routes queries to agents, manages sessions, chains tools"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "aios-core",
    "aios-agents",
    "aios-memory",
    "aios-tools",
    "aios-scheduler",
]

[project.scripts]
aios-orchestrator = "aios.orchestrator.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios"]
