[project]
name = "aios-search"
version = "0.1.0"
description = "AIOS Search Service — semantic and full-text search"
requires-python = ">=3.12"
dependencies = [
    "aios-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios/search"]
