[project]
name = "aios-supervisor"
version = "0.7.0"
description = "AIOS Supervisor — top-level long-running goal orchestration service"
requires-python = ">=3.11,<3.14"
license = "Apache-2.0"
dependencies = [
    "aios-core",
    "aios-agents",
    "aios-orchestrator",
    "aios-skills",
    "aios-workflows",
    "aios-security",
    "aios-integrations",
    "aios-platform",
    "aios-telemetry",
    "aios-desktop",
    "httpx2>=0.28",
    "websockets>=13.0",
]

[project.scripts]
aios-supervisor = "aios.supervisor.main:run"
aios = "aios.supervisor.cli:main"
aiosd = "aios.supervisor.main:run_daemon"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios"]
