[project]
name = "aios-telemetry"
version = "0.1.0"
description = "AIOS Telemetry Service — metrics, tracing, and observability"
requires-python = ">=3.12"
dependencies = [
    "aios-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios/telemetry"]
