[project]
name = "aios-vector"
version = "0.1.0"
description = "AIOS Vector Service — embedding storage and similarity search"
requires-python = ">=3.12"
dependencies = [
    "aios-core",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aios/vector"]
